--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -25,8 +25,8 @@
 \usepackage{geometry}
  \geometry{
  a4paper,
- total={170mm,257mm},
- left=20mm,
+ total={190mm,257mm},
+ left=11mm,
  top=20mm,
  }
 
@@ -35,17 +35,17 @@
 \maketitle
 
 \begin{abstract}
-Deep Learning models are increasingly used for a variety of time series forecasting applications and show significant promise as the industry-leading methodology for the foreseeable future, as previously used methods can be integrated into them easily. In this research, Deep Recurrent Neural Networks(RNN) with Long Short Term Memory(LSTM) are explored to handle the problem of uncertainty in Bitcoin(BTC) prices. We evaluate their efficacy in relation to more generally accepted time series approaches, in particular the (S)AR(I)MA(X) models. We imagine a cooperative utopia for man and machine to harmoniously unite in intuitive and logical unison for the continual improvement and sustainability of the economic machine by which we are all inter-dependently associated.
+Deep Learning models are increasingly used for a variety of time series forecasting applications and show significant promise as the industry-leading methodology for the foreseeable future, as previously used methods can be integrated into them easily. In this research, Deep Recurrent Neural Networks(RNN) with Long Short Term Memory(LSTM) are explored to handle the problem of uncertainty in Bitcoin(BTC) prices. We evaluate their efficacy in relation to more generally accepted time series approaches, in particular the (S)AR(I)MA(X) models.
 \end{abstract}
 
 \begin{multicols}{2}
 \section{Introduction}
- We apply deep learning to a duple of tactical parameters: lookback period and forecast length, hereby denoted as $\langle wlen, flen \rangle$ for window length and forecast length respectively. We execute a two-pronged strategy.:
+ We apply deep learning to a duple of tactical parameters: lookback period and forecast length, hereby denoted as $\langle wlen, flen \rangle$ for window length and forecast length respectively. We execute a two-pronged strategy:
 \begin{enumerate}
-\item We use a discrete Classification Model RNN model to determine the optimal hold period $flen$ for a position held over a given $wlen$ from a semi-random sequence of $\langle wlen, flen \rangle$ pairs.
-\item We use a continuous linear RNN model to predict the price following each set of chosen tactical parameters $\langle wlen, flen \rangle$.
+\item We use a discrete binary classification RNN model to determine the optimal hold period $flen$ for a position held over a given $wlen$ randomly searched from a set of $\langle wlen, flen \rangle$ pairs in the range wlen in 1-480 days, flen in 1-20 days (swing trade range).
+\item We then use a continuous Prediction RNN model to predict the price following the optimal tactical parameters discovered in step 1.
 \end{enumerate}
-Minimization of hold period is highly desirable when risk & return characteristics are in parity across the set of tactical parameters as minimizing reduces value-at-risk in aggregate for a trading program. Having a sensible target price aids in tactical trading decisions such as risk-return calculations and exit point determination.
+Minimization of hold period is highly desirable for a trading program when risk \& return characteristics are in parity across a set of tactical parameters as minimization reduces value-at-risk in aggregate. Having a sensible target price aids in tactical trading decisions such as risk-return calculations and exit point determination.
 
 
 \section{Related Work}
@@ -63,18 +63,18 @@ Our dataset consists of the following:
 \subsubsection{Scaling}
 \paragraph{Classification Model}
 We scale the both the price and volume series to adjust the range of values to be gaussian with zero mean and unit variance, without changing the distribution. This will prevent a feature with high variance that is orders of magnitude higher than other features from dominating and making the estimator unable to learn from other features correctly.
-\paragraph{Linear Model}
+\paragraph{Prediction Model}
 Ryan
 
 \subsubsection{Regularization}
-We regard the old wall street maxim "The trend is your friend" to be a good starting point for the evaluation of deep learning on financial time series. So in order to reduce noise that might prevent the machine learning algorithm from learning the trend, we regularize both the classification and linear models using a Kalman filter with the \href{https://pykalman.github.io/}{pykalman} library.
+We regard the old wall street maxim "The trend is your friend" to be a good starting point for the evaluation of deep learning on exchange traded financial assets. So in order to reduce noise that might prevent the machine learning algorithm from learning the trend, we regularize both the classification and Prediction Model series data using a Kalman filter with the \href{https://pykalman.github.io/}{pykalman} library.
 
 
 \paragraph{Kalman Filter}
 The Kalman filter process has two steps:
 \begin{itemize}
 \item The prediction step, which uses a previously estimated state and
-  the linear model to predict the value of the next state as well as
+  the Prediction Model to predict the value of the next state as well as
   the states estimated covariance.
 
 \item The update step, which uses the current output together with the statistical properties of the model, to
@@ -87,7 +87,7 @@ The Kalman filter process has two steps:
 \subsubsection{Preprocessing}
 \paragraph{Classification Model}
 Eric TODO (windowing and balancing the data) \cite{4_website}
-\paragraph{Linear Model}
+\paragraph{Prediction Model}
 Ryan TODO
 
 
@@ -98,14 +98,14 @@ Price and Volume were used in the classification model for simplicity to ensure 
 
 \say{Everything should be made as simple as possible, but not simpler. } - Albert Einstein
 
-\paragraph{Linear Model}
+\paragraph{Prediction Model}
 Ryan TODO (ta library) \cite{3_website}.
 
 
 \subsection{Activation, Loss}
 \paragraph{Classification Model}
 Eric TODO (windowing and balancing the data) \cite{4_website}
-\paragraph{Linear Model}
+\paragraph{Prediction Model}
 Ryan TODO (ta library) \cite{3_website}.
 
 We plan to use the root mean squared error (RMSE) between predicted and true financial time series as the cost function and evaluation metric for our models, as implemented in the EDA notebook. We also plan to build out a data pipeline using simple data stores (redis or sqlite).
@@ -113,52 +113,32 @@ We plan to use the root mean squared error (RMSE) between predicted and true fin
 
 \subsection{Hyperparameter Tuning}
 The hyperparameter decisions that were most effective at tuning the model were smaller number of hidden units per layer, dropout, scaling and normalizing the data in the pre-processing step, learning rate, and batch normalization.
-\subsubsection{Network Architecture}
-\paragraph{Classification Model}
-A 3 layer RNN model for Classification Model with no kernel or activity regularization was effective to a desirable level of accuracy.
-\paragraph{Linear Model}
-The linear model (Ryan)...
-\subsubsection{Number of Epochs}
-\paragraph{Classification Model}
-A 50-75 epoch run was most effective for the classifiction model as validation loss increased beyond with a slight decline in accuracy, and X-X for the linear model.
-\paragraph{Linear Model}
-The linear model (Ryan)...
 \subsubsection{Batch Size}
 \paragraph{Classification Model}
 Due to the 'small data' nature of our inquiry, a lower batch size of 64 for the binary model sufficed.
-\paragraph{Linear Model}
-A batch size of 32 was adequate for the linear model.
+\paragraph{Prediction Model}
+A batch size of 32 was adequate for the Prediction Model.
 \subsubsection{Learning Rate}
 \paragraph{Classification Model}
-.001
-\paragraph{Linear Model}
+Many learning rates were tried in the range .1 - .00001 with .001 being preferable
+\paragraph{Prediction Model}
 .001
 \subsubsection{Dropout}
 \paragraph{Classification Model}
 A dropout ratio of 0.4 improved the volatility of the classification model significantly from baseline (sans any regularization).
-\paragraph{Linear Model}
-The linear model (Ryan)...
-\subsubsection{Loss Functions}
-\paragraph{Classification Model}
-Eric TODO 'adam'
-\paragraph{Linear Model}
-The linear model (Ryan)...
-\subsubsection{Activation Functions}
-\paragraph{Classification Model}
-Eric TODO 'sparse_categorical_crossentropy'
-\paragraph{Linear Model}
+\paragraph{Prediction Model}
+The Prediction Model (Ryan)...
 \subsubsection{Hidden Units}
 \paragraph{Classification Model}
 Given the 'small data' nature of our inquiry, a lower number of units was most effective for increasing accuracy, reducing loss, and decreasing overall volatility of metrics.
-\paragraph{Linear Model}
+\paragraph{Prediction Model}
 \subsection{Tactical Parameters}
 Our research showed a 120 period window with a forecast period of 3 gave the greatest accuracy with the lowest loss and the least volatility of all other tested combinations, taking into account risk-parity considerations (4 periods showed very similar results, with slightly more stability in accuracy across epochs, but 3 gives less value-at-risk in practical application in finance).
 
 \subsection{Results}
-
 \subsubsection{Classification Model}
-A 120 period window with a forecast period of 3 was the optimal random swing trade for bitcoin since 10/11/2015. While this may change in the future, we are certain that additional data and feature engineering, novel approaches, and additional human insights will enhance the tactics disclosed herein.
-\subsubsection{Linear Prediction}
+Our supervised learning approach indicates that a 120 period window with a forecast period of 3 was the optimal random swing trade for bitcoin since 10/11/2015. While this may change in the future, we are optimistic that additional data and feature engineering, novel approaches, and additional human insights will enhance the trading tactics disclosed herein.
+\subsubsection{Prediction Model}
 Ryan
 
 \begin{figure}[h!]
@@ -169,7 +149,7 @@ Ryan
 \end{figure}
 
 \section{Conclusions}
-Deep Recurrent Neural Networks are
+Deep Recurrent Neural Networks are effective in tactical trading decision making support .
 % \section{Analysis}
 % ``Time Series, in conjunction with deep neural nets is a win, win proposition for quantitative analysis of cryptoassets.'' \citep{adams1995hitchhiker}
 \section{Future Work}
